--- a/pagina5.html
+++ b/pagina5.html
@@ -7,21 +7,20 @@
     <title>Galeria de imagenes</title>
 </head>
 <body>
-    <header>
+    <header></header>
         <h1>Momentos de Cristiano Ronaldo</h1>
         <nav>
             <ul>
-                <li><a href="pagina2.html">Siguiente</a></li>
+                <li><a href="pagina4.html">Atras</a></li>
             </ul>
         </nav>
     </header>
     <section>
         <article>
-            <h1>Mejores momentos de Cristiano Ronaldo</h1>
-            
-            <img src="img1.jpg" border="10px" alt="Cristiano" width="500px">
-            <p>Presentación de Cristiano Ronaldo en Madrid.</p>
+            <h3>Mejores momentos de Cristiano Ronaldo</h3>
+            <img src="img5.jpg" border="50px" alt="Control con el pecho de Cristiano">
+            <p>Xavi Hernández presenciando un control de balon del Portuges.</p>
         </article>
     </section>
+    
 </body>
-</html>
