--- a/pagina4.html
+++ b/pagina4.html
@@ -7,21 +7,22 @@
     <title>Galeria de imagenes</title>
 </head>
 <body>
-    <header>
+    <header></header>
         <h1>Momentos de Cristiano Ronaldo</h1>
         <nav>
             <ul>
-                <li><a href="pagina2.html">Siguiente</a></li>
+                <li><a href="pagina3.html">Atras</a></li>
+                <li><a href="pagina5.html">Siguiente</a></li>
             </ul>
         </nav>
     </header>
     <section>
         <article>
-            <h1>Mejores momentos de Cristiano Ronaldo</h1>
-            
-            <img src="img1.jpg" border="10px" alt="Cristiano" width="500px">
-            <p>Presentación de Cristiano Ronaldo en Madrid.</p>
+            <h3>Mejores momentos de Cristiano Ronaldo</h3>
+            <img src="img4.jpg" border="50px" alt="Chilena ante Juventus FC">
+            <p>CR7 realizando un acrobatico gol en Champions.</p>
         </article>
     </section>
+    
 </body>
-</html>
+</html>|
